--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -996,6 +996,7 @@ server {
         rewrite ^/doc/psychology/inner-monologue/(?<old>.*)$ /doc/psychology/inner-voice/$old permanent;
         rewrite ^/doc/www/scribe\.rip/(?<old>.*)$ /doc/www/freedium.cfd/$old permanent;
         rewrite ^/(?<old>.*)~$ /$old permanent;
+        rewrite ^/(?<old>.*)\&amp$ /$old permanent;
         rewrite ^/(?<old>.*)/guestbook$ /$old/index permanent;
         rewrite ^/doc/music/music-distraction/(?<old>.*)$ /doc/psychology/music/distraction/$old permanent;
         rewrite ^/(?<before>.*)/1\*(?<after>.*)$ /$before/$after permanent;
