--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8781,25 +8781,25 @@
 "~^/Anie-review$" "/review/anime";
 "~^/manga$" "/review/anime#manga";
 "~^/arpa.*" "/review/arpa";
-"~^/Bakehttps://vitalik.ca/general/2020/12/28/endnotes.htmlwell$" "/reviews/Bakewell";
+"~^/Bakehttps://vitalik.ca/general/2020/12/28/endnotes.htmlwell$" "/review/Bakewell";
 "~^/[Bb]aker.*$" "/review/bakker";
 "~^/reviews/BooksS.*$" "/review/book";
 "~^/%20review$" "/review/book";
-"~^/Book-reviews\:\-ted.*$" "/reviews/Books#stories-of-your-life-and-others-chiang-2010";
-"~^/Cat-$" "/reviews/cat-sense";
-"~^/fuzz-testing.*$" "/reviews/cat-sense#fuzz-testing";
-"~^/cultural-revolution.*$" "/reviews/cultural-revolution";
-"~^/doc/reviews/index$" "/reviews/index";
-"~^/[Ff]olly.*$" "/reviews/mcnamara";
-"~^/doc/genetics/selection/www.mountimprobable.com/Mead$" "/reviews/mead";
-"~^/doc/[a-km-z].*/MLP.*$" "/reviews/mlp";
+"~^/Book-reviews\:\-ted.*$" "/review/Books#stories-of-your-life-and-others-chiang-2010";
+"~^/Cat-$" "/review/cat-sense";
+"~^/fuzz-testing.*$" "/review/cat-sense#fuzz-testing";
+"~^/cultural-revolution.*$" "/review/cultural-revolution";
+"~^/doc/reviews/index$" "/review/index";
+"~^/[Ff]olly.*$" "/review/mcnamara";
+"~^/doc/genetics/selection/www.mountimprobable.com/Mead$" "/review/mead";
+"~^/doc/[a-km-z].*/MLP.*$" "/review/mlp";
 "~^/reviews/MLP.page.*$" "/review/mlp.md";
-"~^/movie.*$" "/reviews/Movies";
-"~^/reviews/@all-about-eve.*$" "/reviews/Movies#all-about-eve";
-"~^/[Oo]pera.*$" "/reviews/Operas";
-"~^/doc/genetics/selection/www.mountimprobable.com/Tea$" "/reviews/Tea";
-"~^/sencha-uji$" "/reviews/Tea#green";
-"~^/%20oolong$" "/reviews/Tea#oolong";
+"~^/movie.*$" "/review/Movies";
+"~^/reviews/@all-about-eve.*$" "/review/Movies#all-about-eve";
+"~^/[Oo]pera.*$" "/review/Operas";
+"~^/doc/genetics/selection/www.mountimprobable.com/Tea$" "/review/Tea";
+"~^/sencha-uji$" "/review/Tea#green";
+"~^/%20oolong$" "/review/Tea#oolong";
 "~^/Char-RNN$" "/rNN-metadata";
 "~^/indexrobots\.txt$" "/robots.txt";
 "~^/biggan/2019-07-27-grapeot-danbooru2018-animecharacterrecognition.tar$" "rsync://176.9.41.242:873/biggan/2019-07-27-grapeot-danbooru2018-animecharacterrecognition.tar";
@@ -9615,19 +9615,19 @@
 "~^/ttps://gwern.net/notes/Small-groups$" "/notes/Small-groups";
 "~^/ttps://gwern.net/notes/TBI$" "/notes/TBI";
 "~^/ttps://gwern.net/notes/Variance-components$" "/notes/Variance-components";
-"~^/ttps://gwern.net/reviews/ARPA$" "/reviews/ARPA";
-"~^/ttps://gwern.net/reviews/Anime$" "/reviews/Anime";
-"~^/ttps://gwern.net/reviews/Bakewell$" "/reviews/Bakewell";
-"~^/ttps://gwern.net/reviews/Bakker$" "/reviews/Bakker";
-"~^/ttps://gwern.net/reviews/Books$" "/reviews/Books";
-"~^/ttps://gwern.net/reviews/Cat-Sense$" "/reviews/Cat-Sense";
-"~^/ttps://gwern.net/reviews/Cultural-Revolution$" "/reviews/Cultural-Revolution";
-"~^/ttps://gwern.net/reviews/MLP$" "/reviews/MLP";
-"~^/ttps://gwern.net/reviews/McNamara$" "/reviews/McNamara";
-"~^/ttps://gwern.net/reviews/Movies$" "/reviews/Movies";
-"~^/ttps://gwern.net/reviews/Operas$" "/reviews/Operas";
-"~^/ttps://gwern.net/reviews/Umineko$" "/reviews/Umineko";
-"~^/ttps://gwern.net/reviews/cat$" "/reviews/cat";
+"~^/ttps://gwern.net/reviews/ARPA$" "/review/ARPA";
+"~^/ttps://gwern.net/reviews/Anime$" "/review/Anime";
+"~^/ttps://gwern.net/reviews/Bakewell$" "/review/Bakewell";
+"~^/ttps://gwern.net/reviews/Bakker$" "/review/Bakker";
+"~^/ttps://gwern.net/reviews/Books$" "/review/Books";
+"~^/ttps://gwern.net/reviews/Cat-Sense$" "/review/Cat-Sense";
+"~^/ttps://gwern.net/reviews/Cultural-Revolution$" "/review/Cultural-Revolution";
+"~^/ttps://gwern.net/reviews/MLP$" "/review/MLP";
+"~^/ttps://gwern.net/reviews/McNamara$" "/review/McNamara";
+"~^/ttps://gwern.net/reviews/Movies$" "/review/Movies";
+"~^/ttps://gwern.net/reviews/Operas$" "/review/Operas";
+"~^/ttps://gwern.net/reviews/Umineko$" "/review/Umineko";
+"~^/ttps://gwern.net/reviews/cat$" "/review/cat";
 "~^/Archiving-URL.*$" "/archiving";
 "~^/Book-review.*$" "/review/book";
 "~^/doc/2002-notenki-memoirs.html.*$" "/doc/eva/2002-takeda-notenkimemoirs";
@@ -10613,7 +10613,7 @@
 "~^/prediction-markets/fiction/batman$" "/fiction/batman";
 "~^/prediction-markets/resilient-haskell-software$" "/resilient-haskell-software";
 "~^/radiance/2002-scholz-radiance$" "/doc/radiance/2002-scholz-radiance";
-"~^/review/ARPA$" "/reviews/arpa";
+"~^/review/ARPA$" "/review/arpa";
 "~^/rss.xml$" "https://gwern.substack.com/feed";
 "~^/Sand\?utm_source=RSS&utm_medium=feed&utm_campaign=1$" "/sand";
 "~^/scaling-hypothesi$" "/scaling-hypothesis";
@@ -12052,7 +12052,7 @@
 "~^/nootropic/nootropicsHe$" "/nootropic/nootropics";
 "~^/doc/On-Disrespect$" "/on-disrespect";
 "~^/otakuand$" "/otaku";
-"~^/review/cat-sense$" "/reviews/cat";
+"~^/review/cat-sense$" "/review/cat";
 "~^/doc/www/www.codinghorror.com/fe638b5cc9588f042a793ffeb3b079f2be435dc6.html/favicon.ico$" "https://codinghorror.com/favicon.ico";
 "~^/doc/www/www.codinghorror.com/2496264cebae6cfe2a2ab51f43baf3e530e3ecb1.html/favicon.ico$" "https://codinghorror.com/favicon.ico";
 "~^/doc/culture/favicon.ico$" "/static/img/favicon.ico";
@@ -12309,7 +12309,7 @@
 "~^/prediction-marketsto$" "/prediction-market";
 "~^/Resorter/$" "/resorter";
 "~^/review/Bo$" "/review/book";
-"~^/review/ARPA/$" "/reviews/arpa";
+"~^/review/ARPA/$" "/review/arpa";
 "~^/jafu\?utm.*$" "/hafu";
 "~^/Slow-ing-Moore$" "/slowing-moores-law";
 "~^/Space$" "/spaced-repetition";
@@ -12369,7 +12369,7 @@
 "~^/note/attentio$" "/note/attention";
 "~^/note/fashio$" "/note/fashion";
 "~^/note/lio$" "/note/lions";
-"~^/review/cultural-revolutio$" "/reviews/cultural-revolution";
+"~^/review/cultural-revolutio$" "/review/cultural-revolution";
 "~^/selectio$" "/selection";
 "~^/spaced-repetitio$" "/spaced-repetition";
 "~^/The-Melancholy-of-Kyon.html$" "/kyon";
@@ -12846,7 +12846,7 @@
 "~^/maze2.*$" "/maze";
 "~^/nootrops$" "/nootropic/nootropic";
 "~^/l-theanine$" "/nootropics#theanine";
-"~^/reviews$" "/reviews/index";
+"~^/reviews$" "/review/index";
 "~^/GANPaint$" "https://link.springer.com/article/10.1007/s41095-022-0287-3";
 "~^/doc/psychology/smith-1977\.pdf.*$" "/doc/psychology/1977-smith.pdf";
 "~^/doc/psychology/per...1941-evans\.pdf.*$" "/doc/psychology/personality/1941-evans.pdf";
@@ -13301,7 +13301,7 @@
 "~^/On$" "/on-disrespect";
 "~^/index.htm$" "/index";
 "~^/meletonin$" "/melatonin";
-"~^/review/Arpa$" "/reviews/arpa";
+"~^/review/Arpa$" "/review/arpa";
 "~^/\./SMPY$" "/smpy";
 "~^/static/image-focus$" "/static/js/image-focus.js";
 "~^/doc/biology/favicon.ico$" "/static/img/favicon.ico";
@@ -14176,7 +14176,7 @@
 "~^/haskell-summer-of-code$" "/haskell/summer-of-code";
 "~^/.*/403.php$" "/doc/index";
 "~^/note/Scaling/$" "/note/scaling";
-"~^/review/Umineko$" "/reviews/umineko";
+"~^/review/Umineko$" "/review/umineko";
 "~^/FMP$" "/fmp-parody";
 "~^/static/build/markdown-lint$" "/static/build/markdown-lint.sh";
 "~^/Story-Of-Your-Live$" "/story-of-your-life";
@@ -14334,7 +14334,7 @@
 "~^/.*/Mead$" "/mead";
 "~^/On-Stresso$" "/on-stress";
 "~^/.*/Replication$" "/replication";
-"~^/review/movies$" "/reviews/movie";
+"~^/review/movies$" "/review/movie";
 "~^/static/build/LinkArchive.hs/favicon.ico$" "/static/img/favicon.ico";
 "~^/static/build/hakyll.hs/favicon.ico$" "/static/img/favicon.ico";
 "~^/static/extracts-annotations.js$" "/static/js/extracts-annotations.js";
@@ -14597,8 +14597,8 @@
 "~^/newsletter/%C2%BF$" "/newletter/index";
 "~^/note/compet$" "/note/competence";
 "~^/note/Small-groups$" "/note/small-groups";
-"~^/reviews-/Books$" "/reviews/books";
-"~^/TV-reviews$" "/reviews/index";
+"~^/reviews-/Books$" "/review/books";
+"~^/TV-reviews$" "/review/index";
 "~^/St$" "/story-of-your-life";
 "~^/self-decrypt$" "/self-decrypting-file";
 "~^/spaced-reoetition$" "/spaced-repetition";
@@ -14674,7 +14674,7 @@
 "~^/doc/psychology/okcupid/thebestquestionsforafirstdate$" "/doc/psychology/okcupid/thebestquestionsforafirstdate.html";
 "~^/doc/sociology/1974-martison\.pdf.*$" "/doc/sociology/1974-martinson.pdf";
 "~^/Drug-heuristi$" "/drug-heuristic";
-"~^/cultural-Revolution$" "/reviews/cultural-revolution";
+"~^/cultural-Revolution$" "/review/cultural-revolution";
 "~^/the-melancholy-of-subulture-society$" "/subculture";
 "~^/tryon/$" "/tryon";
 "~^/zeo/Potassium/$" "/zeo/potassium";
@@ -15485,7 +15485,7 @@
 "~^/NicotineJust$" "/nicotine";
 "~^/nootropic/nootropics/$" "/nootropic/nootropics";
 "~^/Nootropic$" "/nootropics/nootropics";
-"~^/review/catsense$" "/reviews/cat";
+"~^/review/catsense$" "/review/cat";
 "~^/static/img/icon/asterism-triplewhitestar-old.svg$" "/static/img/ornament/asterism-triplewhitestar.svg";
 "~^/static/js/s$" "/static/js/index";
 "~^/terrorism-is-not-about-terro$" "/terrorism-is-not-about-terror";
@@ -15673,7 +15673,7 @@
 "~^/GPT-3L$" "/gpt-3";
 "~^/doc/feed$" "https://gwern.substack.com/feed";
 "~^/Music$" "/music-distraction";
-"~^/review/culturalrevolution$" "/reviews/cultural-revolution";
+"~^/review/culturalrevolution$" "/review/cultural-revolution";
 "~^/wiki$" "/index";
 "~^/newsletter/static/font/SourceSerifPro-BASIC-SemiboldItalic.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-SemiboldItalic.ttf";
 "~^/layout.js$" "/static/js/layout.js";
@@ -16481,7 +16481,7 @@
 "~^/note/ramsey.md$" "/note/frank-ramsey.md";
 "~^/.*/Hafu$" "/hafu";
 "~^/MacNamara$" "/review/mcnamara";
-"~^/review/movies.md$" "/reviews/movie.md";
+"~^/review/movies.md$" "/review/movie.md";
 "~^/SMPY\?utm_source.*$" "/smpy";
 "~^/searcch$" "/search";
 "~^/sitemap.sip/$" "/sitemap.xml";
@@ -17045,7 +17045,7 @@
 "~^/lizardman$" "/note/lizardman-constant";
 "~^/prediction$" "/prediction-market";
 "~^/\*\.md$" "/index";
-"~^/review/Darpa$" "/reviews/arpa";
+"~^/review/Darpa$" "/review/arpa";
 "~^/Scanner$" "/scanners";
 "~^/Self-decrypti$" "/self-decrypting-file";
 "~^/silk-road/2$" "/silk-road";
@@ -17846,7 +17846,7 @@
 "~^/GPT-3IBM$" "/gpt-3";
 "~^/GPTs3$" "/gpt-3";
 "~^/review/Cat$" "/review/cat";
-"~^/review/cat-sense.md$" "/reviews/cat.md";
+"~^/review/cat-sense.md$" "/review/cat.md";
 "~^/search=q$" "/search";
 "~^/static/font/EngraversOldEnglish-Bold.ttf$" "/static/font/blackletter/EngraversOldEnglish-Bold.ttf";
 "~^/static/font/dropcap/dropcat/dark/B-1-small-2x.png$" "/static/font/dropcap/dropcat/dark/B-dark-1-small-2x.png";
@@ -18307,7 +18307,7 @@
 "~^/.*chosen\.php.*$" "/static/404";
 "~^/doc/economics/1965-whinney.pdf.*$" "/doc/economics/1965-mcwhinney.pdf";
 "~^/terrorism-is-not-effective/.*$" "/terrorism-is-not-effective";
-"~^/doc/nootropic/quantified-self/2018-05-17-%C3%83%C2%B0$" "";
+"~^/doc/nootropic/quantified-self/2018-05-17-%C3.*$" "/doc/nootropic/bacopa/2018-05-17-gwern-bacopa.csv";
 "~^/doc/modafinil/darknet-market/euq.*$" "/doc/modafinil/darknet-market/index";
 "~^/doc/Ii.*$" "/doc/index";
 "~^/doc/ai/nn/transformer/fiction/index$" "/doc/ai/nn/transformer/index";
@@ -18326,6 +18326,93 @@
 "~^/doc/www/pkhungurn.github.io/suzuka_utako$" "https://pkhungurn.github.io/suzuka_utako";
 "~^/doc/www/pkhungurn.github.io/fu_p_l1$" "https://pkhungurn.github.io/fu_p_l1";
 "~^/doc/www/pkhungurn.github.io/eudric$" "https://pkhungurn.github.io/eudric";
+"~^/note/daicon-video$" "/note/daicon-videos";
+"~^/deep-learningleinen.*$" "/index#deep-learning";
+"~^/doc/ai/nn/transformer/gpt/2/humor/index$" "/doc/ai/nn/transformer/gpt/3/humor/index";
+"~^/CYOA-.*$" "/cyoa";
+"~^/static/js/sidenotes.js/$" "/static/js/sidenotes.js";
+"~^/static/historypage.js$" "/static/index";
+"~^/narrowing-circle/$" "/narrowing-circle";
+"~^/index_.php.*$" "/index";
+"~^/doc/xed.*$" "/doc/index";
+"~^/doc/sociology/Shape.*$" "/doc/sociology/index";
+"~^/doc/sociology/%E5%9B%BE%E7%89%87-16.*$" "/doc/sociology/index";
+"~^/doc/rl/2019%C3%A2%E2%82%AC%C2%90stanley\.pdf.*$" "/doc/reinforcement-learning/model-free/2019-stanley.pdf";
+"~^/doc/psychology/1957-osgood-the$" "/doc/psychology/1957-osgood-themeasurementofmeaning.pdf";
+"~^/doc/iq/ses/2009-richwine.pdfmail.*$" "/doc/iq/ses/2009-richwine.pdf";
+"~^/doc/iodine/1972-fierro-ben%C3%83%C2%BF%C3%83%C2%BFtez\.pdf.*$" "/doc/iodine/1972-fierrobenitez.pdf";
+"~^/doc/economics/torey07.htm$" "/doc/economics/index";
+"~^/doc/co2/2015-stafford.pdf9$" "/doc/co2/2015-stafford.pdf";
+"~^/as/.*$" "/static/404";
+"~^/.*/function.php$" "/static/404";
+"~^/add_class\..*$" "/static/404";
+"~^/.*/text.php$" "/static/404";
+"~^/AB-testing/$" "/ab-testing";
+"~^/Abo$" "/about";
+"~^/backstop/$" "/backstop";
+"~^/Candy-Japan/$" "/candy-japan";
+"~^/clone&amp.*$" "/clone";
+"~^/complexity/$" "/complexity";
+"~^/Culture-is-not-about-esthetics/$" "/culture-is-not-about-esthetics";
+"~^/DNM-arrestsl.*$" "/dnm-arrests";
+"~^/note/sparsity///$" "/doc/ai/nn/sparsity/index";
+"~^/doc/2014-mccaleb/$" "/doc/bitcoin/2014-mccaleb";
+"~^/doc/70.*$" "/doc/index";
+"~^/regression$" "/note/regression";
+"~^/doc/psycholo-gy/1952-asch\.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/psychology/lingui$" "/doc/psychology/linguistics/index";
+"~^/3chron.html$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/3chron.html";
+"~^/docs.sociology/1962-calhoun\.pdf.*$" "/doc/sociology/1962-calhoun.pdf";
+"~^/doc/statistics/bayes/1994-falk/$" "/doc/statistics/bayes/hope-function/1994-falk";
+"~^/doc/statistics/bias/2011-tatum-eeg-figure1-jelloeeg.jpg$" "/doc/statistics/bias/2011-tatum-eeg-figure1-jelloeeg.png";
+"~^/Epigrams/$" "/epigrams";
+"~^/fiction/The-Ones-Who-Walk-Towards-Acre/$" "/fiction/the-ones-who-walk-towards-acre";
+"~^/forking-path/$" "/forking-path";
+"~^/GPT-3Int.*$" "/gpt-3";
+"~^/GPT-3-nonfiction/$" "/gpt-3-nonfiction";
+"~^/Hyperbolic-Time-Chamber/$" "/hyperbolic-time-chamber";
+"~^/Iodine/$" "/iodine";
+"~^/Language/$" "/language";
+"~^/Leprechauns/$" "/leprechauns";
+"~^/Lewis-meditation/$" "/lewis-meditation";
+"~^/Life-contract/$" "/life-contract";
+"~^/Littlewood///$" "/littlewood";
+"~^/littlewood/$" "/littlewood";
+"~^/the-long-stagnation/$" "/long-stagnation";
+"~^/aboutus/$" "/me";
+"~^/Melon/$" "/melon";
+"~^/mugging:/$" "/mugging";
+"~^/Music-distraction/$" "/music-distraction";
+"~^/newsletter/2013/12/$" "/newsletter/2013/12";
+"~^/newsletter/2014/01/$" "/newsletter/2014/01";
+"~^/newsletter/2014/02/$" "/newsletter/2014/02";
+"~^/newsletter/2019/13/$" "/newsletter/2019/13";
+"~^/newsletter/2014/03/$" "/newsletter/2014/index";
+"~^/newsletter/2014/05/$" "/newsletter/2014/05";
+"~^/newsletter/2014/04/$" "/newsletter/2014/04";
+"~^/newsletter/2014/06/$" "/newsletter/2014/06";
+"~^/Disasters$" "/note/local-optima";
+"~^/note/attention///$" "/note/attention";
+"~^/Order-statistics/$" "/order-statistics";
+"~^/Tea/$" "/review/tea";
+"~^/MLP/$" "/review/mlp";
+"~^/Sand/$" "/sand";
+"~^/scaling-hypothesis///$" "/scaling-hypothesis";
+"~^/identity$" "/me";
+"~^/tank//static/LinkAuto.hi$" "/static/build/Config/LinkAuto.hs";
+"~^/static/build/MetadataTitle.hs$" "/static/build/Metadata/Title.hs";
+"~^/static/font/BlackmoorPlain.otf$" "/static/font/blackletter/BlackmoorPlain.otf";
+"~^/static/font/dropcap/Yinit-G.ttf$" "/static/font/dropcap/yinit/Yinit-G.ttf";
+"~^/static/font/dropcap/Yinit-R.ttf$" "/static/font/dropcap/yinit/Yinit-R.ttf";
+"~^/favicon/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/culture/2010-dobelli/favicon.ico$" "/static/img/favicon.ico";
+"~^/Variables/$" "/variables";
+"~^/Weather/$" "/weather";
+"~^/WiFi/$" "/wifi";
+"~^/wikipedia-and-dark-side-editing/$" "/wikipedia-and-dark-side-editing";
+"~^/[Ll]evine.*$" "/matt-levine";
+"~^/Matt?-?[Ll]evine.*$" "/matt-levine";
+"~^/matt?-?levines.*$" "/matt-levine";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
