--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -44,11 +44,13 @@ server {
                  auth_basic_user_file /etc/nginx/.htpasswd; }
 
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
-        location /doc/www/               { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; ssi off; }
-        location /doc/link-bibliography/ { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
-        # repeat robots.txt's major rules, because Google Search appears to ignore it:
-        location /metadata/              { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
-        location /static/404             { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
+        # Prevent crawlers from indexing specific directories to reduce DMCA risk
+        # and repeat robots.txt's major rules, because Google Search appears to ignore it:
+        location ~ ^/(doc/www/|doc/link-bibliography/|metadata/|static/404) {
+                 add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
+
+        # Specific configuration for /doc/www/: WWW snapshots may accidentally match SSI includes, breaking them badly, so disable SSI just for those:
+        location /doc/www/ { ssi off; }
 
         ## support basic MIME types
         include  /etc/nginx/mime.types;
