--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18449,6 +18449,52 @@
 "~^/static/js/popups.js/.*$" "/static/js/popups.js";
 "~^/static/metadata/preview.hs/.*$" "https://github.com/gwern/gwern.net/";
 "~^/static/metadata/auto.hs/.*$" "/metadata/auto.gtx";
+"~^/sandbox$" "/lorem";
+"~^/static/build/2024-08-07-gwernnet-daterangesubscripts-htmlhits.txt.*$" "/static/404";
+"~^/sock$" "/socks";
+"~^/proselint.*$" "http://proselint.com/";
+"~^/doc/sociology/1980-pattonqualitativeevaluationmethods\.pdf.*$" "/doc/sociology/1980-patton-qualitativeevaluationmethods.pdf";
+"~^/doc/rotten.com/religion/index$" "/doc/rotten.com/library/religion/index.html";
+"~^/doc/bitcoin/1982-ijiri-tripleentrybookkeepingandincomemomentum$" "/doc/bitcoin/1982-ijiri-tripleentrybookkeepingandincomemomentum.pdf";
+"~^/Wayback-Machine.*$" "https://en.wikipedia.org/wiki/Wayback_Machine";
+"~^/introduction$" "/index";
+"~^/doc/traffic/2010-%EF%BF%BD.*$" "/doc/traffic/index";
+"~^/doc/reinforcement-learning/model/alphago/2017-silver$" "/doc/reinforcement-learning/model/alphago/2017-silver.pdf";
+"~^/doc/psychology/music/distraction/1994-allen$" "/doc/psychology/music/distraction/1994-allen.pdf";
+"~^/doc/genetics/selection/2014-yao.pdftable$" "/doc/genetics/selection/2014-yao.pdf";
+"~^/doc/genetics/1998-haley-figure5-iteratedembryoselection.png/$" "/doc/genetics/selection/1998-haley-figure5-iteratedembryoselection.png";
+"~^/doc/design/typography/1963tinkerlegibilityofprint\.pdf.*$" "/doc/design/typography/1963-tinker-legibilityofprint.pdf";
+"~^/doc/darknet-market/2013van-hout-2\.pdf.*$" "/doc/darknet-market/2013-van-hout-2.pdf";
+"~^/doc/BM14-SPW-fawkescoin\.pdf.*$" "https://jbonneau.com/doc/BM14-SPW-fawkescoin.pdf";
+"~^/doc/anime/eva/little-boy/\(options.*$" "/doc/anime/eva/little-boy/index";
+"~^/doc/ai/2020-brown-figure31-gpt3scaling.png/$" "/doc/ai/nn/transformer/gpt/2020-brown-figure31-gpt3scaling.png";
+"~^/doc/ai/2019-radford-figure4-gpt2validationloss.png/$" "/doc/ai/nn/transformer/gpt/2019-radford-figure4-gpt2validationloss.jpg";
+"~^/CNET.html$" "https://en.wikipedia.org/wiki/CNET";
+"~^//1975.php$" "/static/404";
+"~^/CNET$" "https://en.wikipedia.org/wiki/CNET";
+"~^/coin-flip/$" "/coin-flip";
+"~^/dnm-survival/$" "/dnm-survival";
+"~^/doc/bitcoin/2008-nakamoto/$" "/doc/bitcoin/2008-nakamoto";
+"~^/doc/cat/catnip/survey/2017-08-228$" "/doc/cat/catnip/survey/index";
+"~^/docs-/co2/2015-stafford\.pdf.*$" "/doc/co2/2015-stafford.pdf";
+"~^/doc/genetics/heritable/2021-willoughby-2-figure3-heritabilityofpoliticalandreligiousattitudes.png$" "/doc/genetics/heritable/adoption/2021-willoughby-2-figure3-heritabilityofpoliticalandreligiousattitudes.png";
+"~^/doc/mini.php$" "/doc/index";
+"~^/doc/2009-darwish\.pdf.*$" "/doc/modafinil/2009-darwish.pdf";
+"~^/style.css$" "/doc/statistics/order/beanmachine-multistage/style.css";
+"~^/doc/cs/style.css$" "/doc/statistics/order/beanmachine-multistage/style.css";
+"~^/fiction/AI$" "/fiction/index";
+"~^/up$" "/static/404";
+"~^/infos/$" "/about";
+"~^/info/$" "/about";
+"~^/dev$" "/index";
+"~^//2index.php$" "/index";
+"~^/LSD-micro$" "/lsd-microdosing";
+"~^/matt-levine///$" "/matt-levine";
+"~^/WP$" "/wikipedia";
+"~^/newsletter/20118$" "/newsletter/2013/index";
+"~^/Nootropics///$" "/nootropics/nootropics";
+"~^/On-S$" "/on-stress";
+"~^/static/css/include/components/dark-mode-adjustments.css$" "/static/css/dark-mode-adjustments.css";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
