--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -1010,6 +1010,8 @@ server {
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
         rewrite ^//(?<original>.+)$ /$original permanent;
+        rewrite ^/(?<original>[A-Za-z0-9-]+)/$ /$original permanent; # try to deal with the spiders bruteforcing appending '/' to all essays like '/self-decrypting/'
+        rewrite ^/(?<original>[A-Za-z0-9-]+/[a-z0-9-]+)/$ /$original permanent;
 
         # Gitit dot-page → Markdown .md migration:
         rewrite /(?<original>.*)\.page$ /$original.md permanent;
