--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18495,6 +18495,25 @@
 "~^/Nootropics///$" "/nootropics/nootropics";
 "~^/On-S$" "/on-stress";
 "~^/static/css/include/components/dark-mode-adjustments.css$" "/static/css/dark-mode-adjustments.css";
+"~^/su$" "/suzanne-delage";
+"~^/wsoya.*$" "/static/404";
+"~^/\~spectral/.*$" "/static/404";
+"~^/.*luuf\.php.*$" "/static/404";
+"~^/.*/edit.php$" "/static/404";
+"~^/pki-validation.*$" "/static/404";
+"~^/moodle/.*$" "/static/404";
+"~^/ludes/.*$" "/static/404";
+"~^/.*class-foo.php.*$" "/static/404";
+"~^/.*insert_activity_db.*$" "/static/404";
+"~^/doc/www/www.1001fonts.com/20$" "https://www.1001fonts.com/";
+"~^/.*bintang.*$" "/static/404";
+"~^/.*/autoload_classmap.*$" "/static/404";
+"~^/ws$" "/doc/cs/index";
+"~^/newsletter/933$" "/doc/newsletter/13";
+"~^/doc/psychology/wr$" "/doc/psychology/index";
+"~^/doc/spaced-repetition-forgetting-curves.png/$" "/doc/psychology/spaced-repetition/gwern-forgetting-curves.png";
+"~^/notenote$" "/note/notes";
+"~^/static/font/dropcap/gene-wolfe/light/V-25.png$" "/static/font/dropcap/gene-wolfe/light/V-light-25.svg";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
