--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -11114,7 +11114,7 @@
 "~^/Reproducibility-crisis$" "/replication";
 "~^/Prediction-markets.*$" "/prediction-market";
 "~^/philosophy$" "/doc/philosophy/index";
-"~^/Notes\?.*$" "/note/notes";
+"~^/Notes\?.*$" "/note/note";
 "~^/Lithium\?.*$" "/lithium";
 "~^/Lewis-meditation\?.*$" "/lewis-meditation";
 "~^/improvements.page$" "/improvement.md";
@@ -12169,7 +12169,7 @@
 "~^/technology/carbon-capture/index$" "/doc/technology/carbon-capture/index";
 "~^/static/img/scrollbar/$" "/static/img/index";
 "~^/reinforcement-learning/deepmind/index$" "/doc/reinforcement-learning/deepmind/index";
-"~^/note/notes\?.*$" "/note/notes";
+"~^/note/notes\?.*$" "/note/note";
 "~^/GPT-2-music\?utm.*$$" "/gpt-2-music";
 "~^/doc/philosophy/https/www.edge.org/conversation/-the-book-of-revelation-prophecy-and-politicsedge-master-class-2011$" "https://www.edge.org/conversation/-the-book-of-revelation-prophecy-and-politicsedge-master-class-2011";
 "~^/doc/lewis-meditation/index$" "/doc/doc/lewis-meditation/index";
@@ -12185,7 +12185,7 @@
 "~^/reinforcement-learning/openai/index$" "/doc/reinforcement-learning/openai/index";
 "~^/reinforcement-learning/model/alphago/doc/reinforcement-learning/model/alphago/index$" "/doc/reinforcement-learning/model/alphago/doc/reinforcement-learning/model/alphago/index";
 "~^/questions\?utm.*$" "/question";
-"~^/note/notes\?utm.*$" "/note/notes";
+"~^/note/notes\?utm.*$" "/note/note";
 "~^/.*/terrorism-is-not-effective$" "/terrorism-is-not-effective";
 "~^/nootropic/magnesiumedit.*$" "/nootropic/magnesium";
 "~^/newsletter-manga$" "/newsletter";
@@ -13683,7 +13683,7 @@
 "~^/LSD-microdosingis$" "/lsd-microdosing";
 "~^/Adderal$" "/nootropics#adderall";
 "~^/note/Local$" "/note/local-optima";
-"~^/Note$" "/notes/notes";
+"~^/Note$" "/note/note";
 "~^/otakuAnd$" "/otaku";
 "~^/Anime-review$" "/review/anime";
 "~^/GPT-%C3%83%C2%B0$" "/gpt-3";
@@ -13736,7 +13736,7 @@
 "~^/doc/rotten.com/library/bio/entertainers/comic/david-letterman/doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.mp3$" "/doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.mp3";
 "~^/doc/1978-rossi\.pdf.*$" "/doc/sociology/1978-rossi.pdf";
 "~^/doc/2003-lee\.pdf.*$" "/doc/statistics/bias/animal/2003-lee.pdf";
-"~^/doc/Notes$" "/note/notes";
+"~^/doc/Notes$" "/note/note";
 "~^/Faves$" "/face";
 "~^/Morning$" "/morning-writing";
 "~^/Scal$" "/scaling-hypothesis";
@@ -13905,7 +13905,7 @@
 "~^/silk$" "/silk-road";
 "~^/note/mlp$" "/note/fc";
 "~^/newsletter/YEAR/13$" "/newsletter/2020/13";
-"~^/note/notes$" "/note/notes";
+"~^/note/notes$" "/note/note";
 "~^/Plastination$" "/plastination";
 "~^/GPT-3Find$" "/gpt-3";
 "~^/Scanners/$" "/scanners";
@@ -15803,8 +15803,10 @@
 "~^/Images/$" "/images/";
 "~^/utext/$" "/utext";
 "~^/newsletter/2020/11\;1$" "/newsletter/2020/12";
-"~^/nota/$" "/note/notes";
-"~^/Notex$" "/notes/notes";
+"~^/nota/$" "/note/note";
+"~^/Notex$" "/note/note";
+"~^/note$" "/note/note";
+"~^/note/$" "/note/note";
 "~^/sidenote/$" "/sidenote";
 "~^/suzanne-delage/$" "/suzanne-delage";
 "~^/image/psychology/2022-dona-figure2-bumblebeeballrollingvideosnapshots.*$" "/doc/psychology/2022-dona-figure2-bumblebeeballrollingvideosnapshots3x3.jpg";
@@ -17055,7 +17057,7 @@
 # "~^/doc/statistics/decision/1999-joyce.pdf%5C.*$" "/doc/statistics/decision/1999-joyce.pdf";
 "~^/.*/fiction/Missing-Cities$" "/fiction/missing-cities";
 "~^/GPT-3Decision.*$" "/gpt-3";
-"~^/doc/psychiatry/-bipolaire/elon-musk/index$" "/doc/psychiatry/bipolair/elon-musk/index";
+"~^/doc/psychiatry/-bipolaire/elon-musk/index$" "/doc/psychiatry/bipolar/elon-musk/index";
 "~^/doc/iq/2001-jensen$" "/doc/iq/2001-jensen.pdf";
 "~^/doc/algernon/2011-finlay\.pdf.*$" "/doc/algernon/2001-finlay.pdf";
 "~^/static/mathjax/$" "/static/mathjax/index";
@@ -17234,8 +17236,8 @@
 "~^/drug-heuristic/$" "/drug-heuristic";
 "~^/GPT3-notification$" "/gpt-3-nonfiction";
 "~^/nootropic/Magnesium$" "/nootropics/magnesium";
-"~^/not$" "/note/notes";
-"~^/Notes/$" "/note/notes";
+"~^/not$" "/note/note";
+"~^/Notes/$" "/note/note";
 "~^/Slowing-Moores-La$" "/slowing-moores-law";
 "~^/static/font/NotoEmoji-Bold-SUBSETTED.ttf$" "/static/font/noto-emoji/NotoEmoji-Bold-SUBSETTED.ttf";
 "~^/doc/personal/2011-gwern-yourmorals.org/justice_process.html/favicon.ico$" "/static/img/favicon.ico";
@@ -18320,7 +18322,7 @@
 "~^/doc/statistics/causality/-1.*$" "/doc/statistics/causality/index";
 "~^/me/me$" "/me";
 "~^/max$" "/order-statistic";
-"~^/note/note&amp.*$" "/note/notes";
+"~^/note/note&amp.*$" "/note/note";
 "~^/doc/www/pkhungurn.github.io/yashiro_kizuku$" "https://pkhungurn.github.io/yashiro_kizuku";
 "~^/doc/www/pkhungurn.github.io/suzuka_utako$" "https://pkhungurn.github.io/suzuka_utako";
 "~^/doc/www/pkhungurn.github.io/fu_p_l1$" "https://pkhungurn.github.io/fu_p_l1";
@@ -18512,8 +18514,49 @@
 "~^/newsletter/933$" "/doc/newsletter/13";
 "~^/doc/psychology/wr$" "/doc/psychology/index";
 "~^/doc/spaced-repetition-forgetting-curves.png/$" "/doc/psychology/spaced-repetition/gwern-forgetting-curves.png";
-"~^/notenote$" "/note/notes";
+"~^/notenote$" "/note/note";
 "~^/static/font/dropcap/gene-wolfe/light/V-25.png$" "/static/font/dropcap/gene-wolfe/light/V-light-25.svg";
+"~^/haskell/haskell/Summer-of-Code$" "/haskell/Summer-of-Code";
+"~^/finance\?.*$" "/doc/economics";
+"~^/doc/statistics/decision/part0006.html$" "/doc/statistics/decision/index";
+"~^/doc/statistics/decision/1983-howard-readingsondecision$" "/doc/statistics/decision/1983-howard-readingsondecisionanalysis-v1.pdf";
+"~^/doc/rotten.com/library/crime/raptors.*$" "/doc/rotten.com/library/crime/index.html";
+"~^/doc/Marvins.php$" "/doc/index";
+"~^/doc/genetics/heritable/correlation/New/xnpgrj_ng_3949\.pdf.*$" "/doc/genetics/heritable/correlation/index";
+"~^/.*icon_chm.gif.*$" "/static/404";
+"~^/doc/design/typography/2018-warnock.pdf%E3.*$" "/doc/design/typography/2018-warnock.pdf";
+"~^/.*class.engine.php.*$" "/static/404";
+"~^/doc/biology/2013-lopezotin\.pdf.*$" "/doc/biology/index";
+"~^/.*1578087141_v3.php.*$" "/static/404";
+"~^/.*mini-shell.php.*$" "/static/404";
+"~^/doc/ai/N7.*$" "/doc/ai";
+"~^/CloudFlare-bypass$" "/static/404";
+"~^/Danbooru2000$" "/Danbooru2021#danbooru2020";
+"~^/archiving-urls.md$" "/archiving.md";
+"~^/danbooru204$" "/danbooru2021#danbooru2020";
+"~^/doc/ai/backpropagation/1986-rumelhart\.pdf.*$" "/doc/ai/nn/fully-connected/1986-rumelhart.pdf";
+"~^/doc/func.php$" "/doc/index";
+"~^/doc/iq/1998-deneve.opdf$" "/doc/iq/1998-deneve.pdf";
+"~^/doc/psychiatry/bipolair/elon-musk/index$" "/doc/psychiatry/bipolar/elon-musk/index";
+"~^/doc/nature$" "/doc/psychology/nature/index";
+"~^/doc/reinforcement-learning/model-fre$" "/doc/reinforcement-learning/model-free/index";
+"~^/doc/reinforcement-learning/model/alphago/2021-jones-figure5-alphazerohexscalinglaws.jpg$" "/doc/reinforcement-learning/model/alphago/2021-jones-figure5-alphazerohexscalinglaws.png";
+"~^/doc/sociology/2019-cruz\.pdf.*$" "/doc/sociology/technology/2017-chung.pdf";
+"~^/doc/terrorism$" "/doc/terrorism/index";
+"~^/wikipedia$" "/doc/wikipedia";
+"~^/GPT-3BHB$" "/gpt-3";
+"~^/nenexl$" "/nenex";
+"~^/checkout$" "/static/404";
+"~^/elites$" "/embryo-selection#embryo-selection-and-dynasties";
+"~^/review/bok$" "/review/book";
+"~^/Book-reading-list.html/$" "/review/book";
+"~^/sitemap.xls$" "/sitemap.xml";
+"~^/default.jsa$" "/index";
+"~^/static/font/dropcap/dropcat/dark/G-2.png$" "/static/font/dropcap/dropcat/dark/G-dark-2.svg";
+"~^/static/font/dropcap/gene-wolfe/dark/V-28.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-28.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-27.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-27.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-08.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-08.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-03.png$" "/static/font/dropcap/gene-wolfe/light/V-light-03.png";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
