--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -4898,7 +4898,7 @@
 "~^/1995-teller\.pdf.*$" "/doc/radiance/1995-teller.pdf";
 "~^/2002-radiance/$" "/doc/radiance/2002-scholz-radiance";
 "~^/doc/radiance/2002-scholz-radiance@about-radiance.*$" "/doc/radiance/2002-scholz-radiance#about-radiance";
-"~^/doc/2002-radiance.*$" "/doc/radiance/2002-scholz-radiance.md";
+"~^/doc/2002-radiance$" "/doc/radiance/2002-scholz-radiance";
 "~^/2002-radiance-part1-plaintext\.txt$" "/doc/radiance/2002-scholz-radiance-part1-plaintext.txt";
 "~^/2002-scholz-radiance\.pdf.*$" "/doc/radiance/2002-scholz-radiance.pdf";
 "~^/2005-gusterson\.pdf.*$" "/doc/radiance/2005-gusterson.pdf";
@@ -18557,6 +18557,38 @@
 "~^/static/font/dropcap/gene-wolfe/dark/V-27.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-27.png";
 "~^/static/font/dropcap/gene-wolfe/dark/F-08.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-08.png";
 "~^/static/font/dropcap/gene-wolfe/light/V-03.png$" "/static/font/dropcap/gene-wolfe/light/V-light-03.png";
+"~^/lorem-tables.*$" "/lorem-table";
+"~^/.*/zb_install/.*$" "/static/404";
+"~^/.*Z-BlogPHP.*$" "/static/404";
+"~^/.*z-bolgphp/.*$" "/static/404";
+"~^/.*zblog/.*$" "/static/404";
+"~^/.*zblogphp.*$" "/static/404";
+"~^/static/font/dropcap/dropcat/light/B-3.png$" "/static/font/dropcap/dropcat/light/B-light-3.png";
+"~^/lifehacker-proxy/10-of-the-first-things-you-should.*$" "https://lifehacker.com/10-of-the-first-things-you-should-try-with-chatgpt-1850368802";
+"~^/doc/icons/newyorktimes.svg$" "/static/img/icon/new-york-times.svg";
+"~^/DNB-FAQn-.*$" "/dnb-faq";
+"~^/doc/culture/2012-r$" "/doc/culture/2012-rule.pdf";
+"~^/doc/genetics/heritable/2019-ross-figure1-kochetal2013-individualdifferencesinexercisebredmice.jpg$" "/doc/exercise/2019-ross-figure1-kochetal2013-individualdifferencesinexercisebredmice.jpg";
+"~^/doc/rotten.com/library/occult/-talismans/rabbits-_foot/index$" "/doc/rotten.com/library/occult/talismans/rabbits_foot/index.html";
+"~^/doc/psychology/spaced-repetition/2012-chessdata-perfectpitchspaced$" "/doc/psychology/spaced-repetition/2012-chessdata-perfectpitchspacedrepetition.webm";
+"~^/static/build/2024-08-05-gwernnet-.*$" "/static/404";
+"~^/Epigrams/index$" "/epigrams";
+"~^/doc/sr/2013-06-hughescourtrecords.html.maff$" "/doc/darknet-market/silk-road/1/2013-08-20-hughescourtrecords.html.maff";
+"~^/doc/rotten.com/library/history/spanish-american-war/$" "/doc/rotten.com/library/history/war/spanish-american-war/index.html";
+"~^/doc/psychology/VH.*$" "/doc/psychology/index";
+"~^/doc/psychology/nature/2010-peen.pdf%E2%80.*$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/doc/psychology/decision/2007-ashtor\.pdf.*$" "/doc/psychology/decision/index";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/personal/2011-gwern-yourmorals.org/cogref_process.php_files/index$" "/doc/personal/2011-gwern-yourmorals.org/cogref_process.php_files/index.html";
+"~^/doc/iq/burt-1966\.pdf.*$" "/doc/iq/1966-burt.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-18.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-18.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-14.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-14.jpg";
+"~^/doc/cs/R/index$" "/doc/cs/r/index";
+"~^/doc/IQ/munich/2013-heller\.pdf.*$" "/doc/iq/high/munich/2013-heller.pdf";
+"~^/404.html$" "/static/404";
+"~^/static/font/dropcap/dropcat/dark/Q-9-small-1x.png$" "/static/font/dropcap/dropcat/dark/Q-dark-9-small-1x.png";
+"~^/static/font/dropcap/Yinit-N.ttf$" "/static/font/dropcap/yinit/Yinit-N.ttf";
+"~^/doc/ihs/favicon.ico$" "/static/img/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
