push /static/404 & /static/help into / content repo per Obormot (to reduce special-cases in popups)

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -31,7 +31,7 @@ server {
      root /home/gwern/gwern.net;
      index index;
 
-     error_page 404 /static/404;
+     error_page 404 /404;
 
      default_type text/html;
 
@@ -46,7 +46,7 @@ server {
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
         # Prevent crawlers from indexing specific directories to reduce DMCA risk
         # and repeat robots.txt's major rules, because Google Search appears to ignore it:
-        location ~ ^/(doc/www/|doc/link-bibliography/|metadata/|static/404) {
+        location ~ ^/(doc/www/|doc/link-bibliography/|metadata/|404) {
                  add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
 
         # Specific configuration for /doc/www/: WWW snapshots may accidentally match SSI includes, breaking them badly, so disable SSI just for those:
@@ -220,7 +220,7 @@ server {
         rewrite ^/fonts/(?<original>.*) /$original permanent;
         rewrite ^/foo/(?<original>.*) /$original permanent;
         rewrite ^/forum/(?<original>.*) /$original permanent;
-        rewrite ^/help/(?<original>.*) /$original permanent;
+        rewrite ^/help/(?<original>.*) /help permanent;
         rewrite ^/homepage-test/(?<original>.*) /$original permanent;
         rewrite ^/in-depth/(?<original>.*) /$original permanent;
         rewrite ^/initiatives/(?<original>.*) /$original permanent;
@@ -866,7 +866,7 @@ server {
         rewrite ^/doc/gan/stylegan/(?<old>.*)$ /doc/ai/nn/gan/stylegan/$old permanent;
         rewrite ^/(?<old>.*)，.*$ /$old permanent;
         rewrite ^/Docs?/(?<old>.*)$ /doc/$old permanent;
-        rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg. '/./Complement' 404s
+        rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg. '/./Complement'
         rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg. '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
         rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).+$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
         rewrite ^/(?<page>doc/psychology/.*)\.htm$ /$page.html permanent;
