--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11705,3 +11705,4 @@ default "";
 "~^/static/help$" "/help";
 "~^/static/help\.md$" "/help.md";
 "~^/static/help\.md\.html$" "/help.md\.html";
+"~^/doc/economics/2000-milhaupt.pdf.*$" "/doc/economics/mechanism-design/2000-milhaupt.pdf";
