--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18586,6 +18586,9 @@
 "~^/static/font/dropcap/dropcat/dark/Q-9-small-1x.png$" "/static/font/dropcap/dropcat/dark/Q-dark-9-small-1x.png";
 "~^/static/font/dropcap/Yinit-N.ttf$" "/static/font/dropcap/yinit/Yinit-N.ttf";
 "~^/doc/ihs/favicon.ico$" "/static/img/favicon.ico";
+"~^/fiction/[Dd]iamond-[Ee]arr?ing.*$" "/fiction/the-diamond-earrings";
+"~^/[Tt]?h?e?-?[Dd]iamond-?[Ee]ar.*$" "/fiction/the-diamond-earrings";
+"~^/fiction/the-diamond-earring$" "/fiction/the-diamond-earrings";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
